# project-manager

./: .gitignore  README.md
api/: .env  pyproject.toml
api/app/: config.py  database.py  main.py  models.py  oauth2.py
api/app/crud/: user.py
api/app/routes/: auth.py  user.py
api/app/schemas/: auth.py  user.py
frontend/: package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/Authentication/: SignInForm.tsx  SignUpForm.tsx  useLoginMutation.ts  useSignUpMutation.ts
frontend/src/components/Authorization/: ProtectedRoute.tsx
frontend/src/components/Navigation/: Aside.tsx
frontend/src/config/: constants.ts
frontend/src/context/: AuthProvider.tsx
frontend/src/layouts/: RootLayout.module.css  RootLayout.tsx
frontend/src/pages/Authentication/: SignInPage.tsx  SignUpPage.tsx
frontend/src/pages/Projects/: ProjectPage.tsx  ProjectsPage.tsx
frontend/src/pages/Tasks/: ArchivedTasksPage.tsx  TasksByQueryPage.tsx  TodayTasksPage.tsx  UpcomingTasksPage.tsx
frontend/src/utils/: fetchUtils.ts
